src/styles/ImageDetails.css
.image-details {
  width: 100%;
  height: 100vh;
  background-color: transparent;
  color: white;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
}

.image-title {
  width: 90%;
  text-align: center;
  font-optical-sizing: auto;
  font-style: normal;
  margin-top: 5px;
  margin-bottom: 0;
}

.detail-image {
  width: 90%;
  height: 45%;
  border-radius: 20px;
  -webkit-box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 1);
  -moz-box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 1);
  box-shadow: 0px 0px 8px 1px rgba(255, 255, 255, 1);
}

.image-description-wrapper {
  width: 90%;
  display: flex;
  align-items: center;
  justify-content: center;
  height: max-content;
  max-height: 150px;
  overflow: scroll;
  color: black;
  background-color: white;
  border-radius: 20px;
  text-align: center;
  padding: 10px;
}

.image-description {
  font-optical-sizing: auto;
  font-style: normal;
  font-size: 16px;
}

.return-to-main-wrapper {
  width: 100%;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.return-img-text-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 215px;
  margin-left: 10px;
  padding-bottom: 3px;
  border-bottom: 1px solid white;
}
.arrow-back {
  filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(138deg)
    brightness(104%) contrast(101%);
}

